--- a/1.html
+++ b/1.html
@@ -1639,9 +1639,9 @@ body {
 <ul>
 <li><font face="&#x6977;&#x4F53;">&#x9996;&#x5148;&#x786E;&#x5B9A;&#x8981;&#x505A;&#x7684;&#x662F;project 2&#xFF0C;<img src="bqb.jpg" width="450" align="right"><br>
 &#x521A;&#x597D;&#x53EF;&#x4EE5;&#x8BB0;&#x5F55;&#x6211;&#x505A;&#x5176;&#x4ED6;&#x7684;project&#x7684;&#x8FC7;&#x7A0B;&#xFF0C;&#x4F5C;&#x4E3A;&#x4E00;&#x4E2A;&#x8BB0;&#x5F55;&#x6765;&#x8BF4;&#x633A;&#x6709;&#x610F;&#x601D;&#x7684;</font></li><font face="&#x6977;&#x4F53;">
-<li>&#x73B0;&#x5728;&#x53EA;&#x80FD;&#x6253;&#x6253;python&#x7684;&#x4EE3;&#x7801;&#xFF0C;<s>&#x56E0;&#x4E3A;&#x6839;&#x672C;&#x6CA1;&#x6709;&#x57FA;&#x7840;hhhh</s></li>
-<li>&#x4E4B;&#x540E;&#x9009;&#x62E9;&#x4E86;project1&#xFF0C;&#x56E0;&#x4E3A;&#x7ED9;&#x4E86;&#x5F88;&#x5927;&#x7684;&#x53D1;&#x6325;&#x7A7A;&#x95F4;&#xFF0C;&#x6211;&#x53EF;&#x4EE5;&#x7528;&#x81EA;&#x5DF1;&#x7684;&#x521B;&#x610F;&#x53BB;&#x5F25;&#x8865;&#x6211;&#x6280;&#x672F;&#x4E0A;&#x7684;&#x4E0D;&#x8DB3;</li>
-<li>&#x5B66;&#x4E60;&#x65B0;&#x4EE3;&#x7801;&#x7684;&#x65F6;&#x5019;&#x8FD8;&#x662F;&#x5F88;&#x6709;&#x610F;&#x601D;&#x7684;</li>
+<li>&#x9009;&#x62E9;python&#x4F5C;&#x4E3A;&#x4EE3;&#x7801;,  (<s>python yes</s>)</li>
+<li>&#x4E4B;&#x540E;&#x9009;&#x62E9;&#x4E86;project1&#xFF0C;&#x56E0;&#x4E3A;&#x7ED9;&#x4E86;&#x5F88;&#x5927;&#x7684;&#x53D1;&#x6325;&#x7A7A;&#x95F4;&#xFF0C;&#x53EF;&#x4EE5;&#x7528;&#x81EA;&#x5DF1;&#x7684;&#x521B;&#x610F;&#x53BB;&#x5F25;&#x8865;&#x6211;&#x6280;&#x672F;&#x4E0A;&#x7684;&#x4E0D;&#x8DB3;</li>
+<li>&#x5B66;&#x4E60;&#x65B0;&#x4EE3;&#x7801;&#x3001;&#x65B0;&#x6A21;&#x5757;&#x7684;&#x65F6;&#x5019;&#x8FD8;&#x662F;&#x5F88;&#x6709;&#x610F;&#x601D;&#x7684;</li>
 </font></ul><font face="&#x6977;&#x4F53;">
 </font></section><section lineno="20" class="slide " data-line="20" data-h="2" data-v="0"><font face="&#x6977;&#x4F53;">
 <h1 class="mume-header" id="some-difficulties">some difficulties&#x1F615;</h1>
@@ -1663,7 +1663,7 @@ body {
 <tr>
 <td style="text-align:left">B</td>
 <td style="text-align:center">&#x4EE3;&#x7801;&#x4E2D;&#x5B57;&#x6BCD;&#x7684;&#x751F;&#x6210;&#x548C;&#x968F;&#x673A;</td>
-<td style="text-align:right">&#x63A7;&#x5236;&#x53D8;&#x91CF;&#x6CD5;</td>
+<td style="text-align:right">&#x63A7;&#x5236;&#x53D8;&#x91CF;&#x6CD5;+&#x8BD5;&#x9519;</td>
 </tr>
 <tr>
 <td style="text-align:left">C</td>
@@ -1679,9 +1679,9 @@ body {
 <ul>
 <li><font size="10">&#x7B2C;&#x4E00;&#x6B21;&#x4F7F;&#x7528;pygame&#x6A21;&#x5757;</font><br>
 <img src="1000.png" width="1000"></li>
-<li>Pygame&#x5E38;&#x7528;&#x51FD;&#x6570;&#xFF08;&#x611F;&#x8C22;CSDN&#x548C;Github&#xFF09;&#x1F604; &#x1F604; &#x1F604;<br>
+<li>Pygame&#x5E38;&#x7528;&#x51FD;&#x6570;&#xFF08;&#x611F;&#x8C22;CSDN&amp;Github&amp;Stackoverflow&#xFF09;&#x1F604; &#x1F604; &#x1F604;<br>
 1.CSDN&#x7ED9;&#x51FA;&#x4E86;&#x4E00;&#x4E9B;&#x5E38;&#x7528;&#x51FD;&#x6570;&#x7684;&#x8868;<br>
-2.GitHub&#x4E0A;&#x6709;&#x8BB8;&#x591A;&#x7528;pygame&#x7F16;&#x7684;&#x5C0F;&#x6E38;&#x620F;&#xFF0C;&#x53EF;&#x4EE5;&#x4E0B;&#x4E0B;&#x6765;&#x770B;&#x4E00;&#x4E9B;&#x51FD;&#x6570;&#x7684;&#x5B9E;&#x9645;&#x5E94;&#x7528;</li>
+2.GitHub&#x4E0A;&#x6709;&#x8BB8;&#x591A;&#x7528;pygame&#x7F16;&#x7684;&#x5C0F;&#x6E38;&#x620F;&#xFF0C;&#x53EF;&#x4EE5;&#x7528;&#x6765;&#x770B;&#x4E00;&#x4E9B;&#x51FD;&#x6570;&#x7684;&#x5B9E;&#x9645;&#x5E94;&#x7528;&#x65B9;&#x6CD5;</li>
 </ul>
 </font></section><section lineno="35" class="slide " data-line="35" data-h="4" data-v="0"><font face="&#x6977;&#x4F53;">
 <h2 class="mume-header" id="difficulties-brandom">difficulties b:random</h2>
